compiler/src/test/resources/amyc/nameAnalyzer/failing/DuplicateMatchLocals2.amy
object Locals
  abstract class IP
  case class IntPair(i: Int, j: Int) extends IP
  fn foo(): Int = {
    IntPair(1,2) match {
      case IntPair(i, i) => 42
    }
  }
end Locals
